Project 2 - Parser/tests/parser/test022.parse.soln.antlr.err
test022.lgf:3.12 Error: syntax error; try deleting ","
