Project 2 - Parser/tests/parser/test022.lgf
(* type constructor with missing type *)
type T ['a, 'b] = ('a -> 'b) -> 'a -> 'b
type U = T [, Integer, Integer]
; 0
